fix: some spacing fixes to H2

--- a/components/Title/Title.module.css
+++ b/components/Title/Title.module.css
@@ -14,4 +14,9 @@
 h2.title {
     font-size: 1.25rem;
     font-weight: 600;
+    margin-bottom: 0.8rem;
+}
+
+h2.title:not(:nth-child(1)) {
+    margin-top: 2rem;
 }
